--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - image: circleci/node:4.8.2
     steps:
       - checkout
-      - run: echo "hello world"
+      - run: bundle exec fastlane test
       - notify_slack_fail
 
 workflows:
