--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,12 @@ commands:
 
 jobs:
   build:
-    docker:
-      - image: circleci/node:4.8.2
+    macos:
+      xcode: 15.1.0
     steps:
       - checkout
+      - run: bundle install
+      - run: bundle exec fastlane generate_project
       - run: bundle exec fastlane test
       - notify_slack_fail
 
