--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       xcode: 15.1.0
     steps:
       - checkout
+      - run: sh skipPackagePluginValidation.sh 
       - run: bundle install
       - run: bundle exec fastlane generate_project
       - run: bundle exec fastlane test
