--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,6 @@ executors:
     macos:
       xcode: 14.3.1
     resource_class: macos.x86.medium.gen2
-dependencies:
-  pre:
-    - brew update
-    - brew install swiftlint
 commands:
   notify_slack_fail:
     steps:
@@ -26,6 +22,8 @@ jobs:
       xcode: 15.1.0
     steps:
       - checkout
+      - run: brew update
+      - run: brew install swiftlint
       - run: sh skipPackagePluginValidation.sh
       - run: sh skipMacroValidation.sh 
       - run: bundle install
