update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,7 @@ jobs:
       - run: sh skipPackagePluginValidation.sh
       - run: sh skipMacroValidation.sh 
       - run: bundle install
-      - run: gem install saddler 
-      - run: gem install saddler-reporter-github
-      - run: gem install swiftlint_translate_checkstyle_format 
+      - run: gem install saddler saddler-reporter-github swiftlint_translate_checkstyle_format checkstyle_filter-git
       - run: bundle exec fastlane generate_project
       - run: bundle exec fastlane test
       - notify_slack_fail
