UT動作テスト (#1)
* UT動作テスト

* CircleCIのIntel macOSが使用できなくなる件の対応

* 無料プランではM1は5月まで使えないので戻し

* saddler導入

* CI swiftlint設定

* update config

* swiftlint_translate_checkstyle_format 導入

* checkstyle_filter-git 導入

* lint警告コメントテスト

* update circleci config

* CI側で設定しているトークンを変更した

* update Fastfile

* update circleci config

* saddlerからlinterbotに置き換え

* fix Fastfile

* lane name修正

This reverts commit 814392cb61c256f4b0116fd34584f8b50b8f5604.

* lintとtestの動作確認用箇所を戻し

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,11 @@ version: 2.1
 orbs:
   slack: circleci/slack@4.8
 
+executors:
+  gen2_medium:
+    macos:
+      xcode: 14.3.1
+    resource_class: macos.x86.medium.gen2
 commands:
   notify_slack_fail:
     steps:
@@ -17,12 +22,16 @@ jobs:
       xcode: 15.1.0
     steps:
       - checkout
+      - run: brew update
+      - run: brew install swiftlint
       - run: sh skipPackagePluginValidation.sh
       - run: sh skipMacroValidation.sh 
       - run: bundle install
+      - run: gem install linterbot 
       - run: bundle exec fastlane generate_project
       - run: bundle exec fastlane test
       - notify_slack_fail
+      - run: bundle exec fastlane swiftlint
 
 workflows:
   code_health:
